<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_teamplate">%s / %s</string>
    <string name="last_update_teamplate">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена:</string>
    <string name="min_price_label">Минимальная цена:</string>
    <string name="max_price_label">Максимальная цена:</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="last_updated_label">Обновлено</string>
</resources>