<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivLogoCoines"
        tools:src="@mipmap/ic_launcher"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="BTC"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
         />
    <TextView
        android:id="@+id/tvSlash"
        android:text="@string/slash"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoCoines"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="USD"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toTopOf="@+id/tvSlash"
        app:layout_constraintBottom_toBottomOf="@+id/tvSlash"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="#000"
                 />
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                tools:text="12312"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                />

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriceLabel"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:textColor="#000"
                />
            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                tools:text="12352"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel"
                />
            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice"
                android:text="@string/min_price_label"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#000"
                 />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12322"
                app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPrice"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                 />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel"
                />
            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice"
                android:text="@string/last_market_label"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#000"
                />

            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Bitfinex"
                app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMinPrice"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"
                />
            <TextView
                android:id="@+id/tvLastDateUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel"
                android:text="@string/last_updated_label"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#000"
                />

            <TextView
                android:id="@+id/tvLastDateUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="21:08:47"
                app:layout_constraintStart_toEndOf="@id/tvLastDateUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarket"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>